# NuMuDisappearance

./: CMakeLists.txt  README
fitters/: CMakeLists.txt  plotLooper_v1.cc  uBfitter.cc  uBfitter_frequensens.cc
inc/: MicroBooNE_dis.h  MiniBooNE_dis.h  OscTools.h  XMLTools.h  datasets.h  fitter.h  globalFit.h
plotter/: FreqXCheck.ipynb  MicroBooNE Disappearance Non-Freq.ipynb  MicroBooNE Disappearance Studies.ipynb  MicroBooNE Osc Pipeline.ipynb  MicroBooNE Sensitivity Fake Data.ipynb  MicroBooNE SpectrumAnalyze.ipynb  PlottingScripts.py
plotter/limits/: .minosminosplus_90.csv.swp  LSND_1.csv  LSND_2.csv  LSND_3.csv  MBSB_90lim.csv  bugey_90.csv  ccfr_95.csv  cdhs_95.csv  danss_95.csv  gallium_95.csv  ic_outline_90.csv  karmen_95.csv  lsnd_davio_90_1.csv  lsnd_davio_90_2.csv  lsnd_davio_90_3.csv  lsnd_davio_90_4.csv  lsnd_davio_90_5.csv  lsnd_davio_99_1.csv  lsnd_davio_99_2.csv  mb_2020_90cl.csv  mb_2020_99cl_1.csv  mb_2020_99cl_2.csv  mb_2020_99cl_3.csv  mb_2020_99cl_4.csv  mb_combined_90.csv  mb_combined_99.csv  mb_davio_90.csv  mb_davio_99_1.csv  mb_davio_99_2.csv  mb_davio_99_3.csv  mb_davio_99_4.csv  mb_nu_dis_90.csv  mb_nubar_dis_90.csv  mb_ref2018_90.csv  mb_ref2018_99_1.csv  mb_ref2018_99_2.csv  mb_ref2018_99_3.csv  mb_ref2018_99_4.csv  mbnu_99CL.csv  mbnubardis_90.csv  (+7 more)
src/: CMakeLists.txt  MicroBooNE_dis.cc  OscTools.cc  XMLTools.cc
tinyxml/: CMakeLists.txt
xml/: plotLoop_v1.xml
